amani/themes/amani_zen/css/styles.css
/* ... */
@media all and (max-width: 480px) {
  /* line 439, ../sass/components/_front-page-blocks.scss */
  .view-news-and-events .views-row .views-field-field-image {
    width: 100%;
    height: auto;
    float: none;
    margin-right: 0;
  }
}
/* line 458, ../sass/components/_front-page-blocks.scss */
.view-news-and-events .views-row .views-field-field-image img {
  border: #fdfeff solid 5px;
  box-shadow: 1px 1px 1px #e6e7e8;
  box-sizing: border-box;
}
@media all and (max-width: 768px) {
  /* line 458, ../sass/components/_front-page-blocks.scss */
  .view-news-and-events .views-row .views-field-field-image img {
    width: 150px;
    height: 110px;
  }
}
@media all and (max-width: 480px) {
  /* line 458, ../sass/components/_front-page-blocks.scss */
  .view-news-and-events .views-row .views-field-field-image img {
    width: 100%;
    height: auto;
    margin-left: -5x;
  }
}
/* line 474, ../sass/components/_front-page-blocks.scss */
.view-news-and-events .views-row .views-field-field-image:before {
  content: "";
  background: url(../images/photo-shadow-left.png) no-repeat 0 0;
  position: absolute;
  width: 62px;
  height: 6px;
  display: block;
  bottom: -6px;
  left: 0;
}
@media all and (max-width: 480px) {
  /* line 474, ../sass/components/_front-page-blocks.scss */
  .view-news-and-events .views-row .views-field-field-image:before {
    display: none;
  }
}
/* line 487, ../sass/components/_front-page-blocks.scss */
.view-news-and-events .views-row .views-field-field-image:after {
  content: "";
  background: url(../images/photo-shadow-right.png) no-repeat 0 0;
  position: absolute;
  width: 62px;
  height: 6px;
  display: block;
  bottom: -6px;
  right: 0;
}
@media all and (max-width: 480px) {
  /* line 487, ../sass/components/_front-page-blocks.scss */
  .view-news-and-events .views-row .views-field-field-image:after {
    display: none;
  }
}
/* line 502, ../sass/components/_front-page-blocks.scss */
.view-news-and-events .views-row .views-field-body {
  display: table;
  margin-top: 15px;
}
/* line 507, ../sass/components/_front-page-blocks.scss */
.view-news-and-events .views-row .views-field-title {
  margin-bottom: 5px;
}
/* line 511, ../sass/components/_front-page-blocks.scss */
.view-news-and-events .views-row .views-field-title a {
  font-family: "Open Sans Condensed", sans-serif;
  color: #ce9bc0;
  font-size: 16px;
  font-weight: bold;
  text-transform: uppercase;
}
/* line 519, ../sass/components/_front-page-blocks.scss */
.view-news-and-events .views-row .views-field-title-1 a {
  font-family: "Open Sans Condensed", sans-serif;
  font-size: 14px;
  font-weight: bold;
  text-transform: uppercase;
  color: #ce9bc0;
  letter-spacing: 0.5px;
  display: block;
  padding: 5px 0 10px;
  margin-left: 225px;
}
/* line 132, ../sass/_mixins.scss */
.view-news-and-events .views-row .views-field-title-1 a:after {
  content: "\f101";
  font-family: amani-icons;
  font-size: 16px;
  font-weight: normal;
  display: inline-block;
  color: #ce9bc0;
  margin-left: 5px;
  position: relative;
  top: 2px;
}
@media all and (max-width: 768px) {
  /* line 519, ../sass/components/_front-page-blocks.scss */
  .view-news-and-events .views-row .views-field-title-1 a {
    margin-left: 176px;
  }
}
@media all and (max-width: 480px) {
  /* line 519, ../sass/components/_front-page-blocks.scss */
  .view-news-and-events .views-row .views-field-title-1 a {
    margin-left: 0;
  }
}

/* line 533, ../sass/components/_front-page-blocks.scss */
.pager {
  font-family: "Open Sans Condensed", sans-serif;
  text-transform: uppercase;
}
/* line 537, ../sass/components/_front-page-blocks.scss */
.pager li {
  padding: 0;
  margin: 0 3px;
}
/* line 540, ../sass/components/_front-page-blocks.scss */
.pager li.pager-first, .pager li.pager-previous, .pager li.pager-next, .pager li.pager-last {
  background-color: transparent;
  padding: 0 1em;
}
@media (max-width: 480px) {
  /* line 540, ../sass/components/_front-page-blocks.scss */
  .pager li.pager-first, .pager li.pager-previous, .pager li.pager-next, .pager li.pager-last {
    padding: 0;
  }
}
/* line 551, ../sass/components/_front-page-blocks.scss */
.pager li.pager-current {
  background-color: #532f57;
  padding: 0 1em;
}
/* line 556, ../sass/components/_front-page-blocks.scss */
.pager a {
  color: #784580;
}
/* line 559, ../sass/components/_front-page-blocks.scss */
.pager li.pager-item a {
  background-color: #dba6c6;
  padding: 0 1em;
}
/* line 563, ../sass/components/_front-page-blocks.scss */
.pager li.pager-current {
  color: #fff;
  font-weight: normal;
}

@media (max-width: 640px) {
  /* line 572, ../sass/components/_front-page-blocks.scss */
  .pager li.pager-item a,
  .pager li.pager-current {
    padding: 0 0.5em;
  }
  /* line 577, ../sass/components/_front-page-blocks.scss */
  .pager li.pager-first a,
  .pager li.pager-previous a,
  .pager li.pager-next a,
  .pager li.pager-last a {
    position: relative;
    display: inline-block;
    font-size: 0;
    height: 20px;
    width: 15px;
    vertical-align: top;
  }
  /* line 588, ../sass/components/_front-page-blocks.scss */
  .pager li.pager-first a:before,
  .pager li.pager-previous a:before,
  .pager li.pager-next a:before,
  .pager li.pager-last a:before {
    content: "\f100";
    font-family: amani-icons;
    font-size: 18px;
    width: 15px;
    height: 20px;
    position: absolute;
    left: 0;
    top: 0;
  }
  /* line 599, ../sass/components/_front-page-blocks.scss */
  .pager li.pager-previous a:before {
    content: "\f104";
  }
  /* line 602, ../sass/components/_front-page-blocks.scss */
  .pager li.pager-next a:before {
    content: "\f105";
  }
  /* line 605, ../sass/components/_front-page-blocks.scss */
  .pager li.pager-last a:before {
    content: "\f101";
  }
}
/* line 610, ../sass/components/_front-page-blocks.scss */
.view-news-and-events .pager {
  margin-top: 20px;
  padding-top: 20px;
  border-top: 1px solid #e6e7e8;
}
/* ... */

